# No40_crypto5

./: .env.example  .gitignore  20260127_crypto_trading_automation.md  CLAUDE.md  GEMINI.md  com.freqtrade.dca-bot.plist.template  docker-compose.yml  pyproject.toml
.claude/plans/: cheerful-tinkering-acorn.md  validated-baking-avalanche-agent-a200058.md  validated-baking-avalanche.md
docs/: CONTRIB.md  RUNBOOK.md  backtest_summary.md  hyperopt_assessment.md  phase5-dryrun-operation.md  unsubscribe-error-investigation.md
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  data.md
docs/initial/: crypto_dca_bot_implementation_guide.md  crypto_dca_bot_requirements.md
docs/plans/: 2026-01-29-cli-integration-tests.md
scripts/: __init__.py  analyze_backtest.py  backup_db.sh  check_dryrun_criteria.py  daily_report.py  diagnose_bot.py  download_data.sh  freqtrade_api_client.py  heartbeat.sh  launchd_wrapper.sh  monitoring_metrics.py  monte_carlo.py  start_dryrun.sh  validate_config.py  validate_env.py  walk_forward.sh
tests/: conftest.py
tests/unit/: test_analyze_backtest.py  test_check_dryrun_criteria.py  test_daily_report.py  test_dca_strategy.py  test_diagnose_bot.py  test_freqtrade_api_client.py  test_indicators.py  test_market_regime.py  test_monitoring_metrics.py  test_monte_carlo.py  test_risk_manager.py  test_slippage_protection.py  test_start_dryrun.py  test_validate_config.py  test_validate_env.py
user_data/config/: config.backtest.json  config.dryrun.safe.json  config.hyperopt.json  config.json  config.json.example  config.live.json
(+6 files in other folders)
